# sootie

./: .commitlint.yaml  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bootstrap.sh  homebrew-formula.rb  install.ps1  install.sh  session-ses_20c9.mdhbbexhbbeXHBBE2h12  session-ses_20c9.md小孩XHhbeBBE  sootie.list  sootie.sources
.github/workflows/: ci.yml  release.yml
crates/sootie-cli/: Cargo.toml
crates/sootie-cli/src/: main.rs
crates/sootie-cli/src/setup/: check.rs  config.rs  mod.rs  model_download.rs  python_env.rs  sidecar.rs  style.rs
crates/sootie-cli/tests/: serve_logging.rs
crates/sootie-core/: Cargo.toml  build.rs
crates/sootie-core/src/: action.rs  browser.rs  cascade.rs  cdp.rs  config.rs  lib.rs  logging.rs  mcp.rs  perception.rs  recipe.rs  recipe_learning.rs  recipe_runtime.rs  selector.rs  tools.rs  types.rs  vision.rs
crates/sootie-core/src/backend/: cdp.rs  linux.rs  macos.rs  mod.rs  null.rs  windows.rs
crates/sootie-core/src/platform/: mod.rs
crates/sootie-core/src/platform/linux/: mod.rs
crates/sootie-core/src/platform/linux/action/: click.rs  drag.rs  focus.rs  hotkey.rs  hover.rs  keyboard.rs  launch.rs  mod.rs  mouse.rs  press.rs  resolver.rs  scroll.rs  type_text.rs  window.rs
crates/sootie-core/src/platform/linux/perception/: apps.rs  context.rs  find.rs  mod.rs  screenshot.rs
crates/sootie-core/src/platform/macos/: action.rs  ax_fns.rs  mod.rs  perception.rs
crates/sootie-core/src/platform/macos/action/: click.rs  drag.rs  drag.rs.bak  focus.rs  hotkey.rs  hover.rs  hover.rs.bak  keyboard.rs  keyboard.rs.bak  launch.rs  mod.rs  mouse.rs  press.rs  scroll.rs  scroll.rs.bak  type_text.rs  type_text.rs.bak  utils.rs  window.rs
crates/sootie-core/src/platform/macos/perception/: apps.rs  context.rs  find.rs  inspect.rs  mod.rs  screenshot.rs  utils.rs  wait.rs
crates/sootie-core/src/platform/windows/: mod.rs
crates/sootie-core/src/platform/windows/action/: click.rs  drag.rs  focus.rs  hotkey.rs  hover.rs  keyboard.rs  launch.rs  mod.rs  mouse.rs  press.rs  resolver.rs  scroll.rs  type_text.rs  window.rs
crates/sootie-core/src/platform/windows/perception/: apps.rs  context.rs  find.rs  mod.rs
crates/sootie-criteria-core/src/platform/linux/perception/: context.rs
crates/sootie-mcp/: Cargo.toml
crates/sootie-mcp/src/: server.rs  tools.rs  types.rs
crates/sootie-mcp/tests/: e2e.rs
dists/stable/: Release
dists/stable/main/binary-amd64/: Packages
docs/api/: mcp-tools-reference.md  recipe-schema.md
docs/architecture/: vision-backend-issues.md
docs/development/: collect-runtime-evidence.mjs  commit-guidelines.md  distribution-setup.md  distribution.md  full-tool-smoke-requests.jsonl  live-browser-cdp-smoke.mjs  real-runtime-checklist.md  release-and-distribution.md  release-strategy-no-cargo.md  run-excalidraw-flower-demo-recording.mjs  run-jsonl-mcp-smoke.mjs  runtime-smoke-runbook.md  verification-matrix.md  verify-full-tool-smoke.mjs  verify-public-tool-contract.mjs  verify-repository-independence.mjs  verify-runtime-evidence.mjs
docs/development/recipes/: safari-excalidraw-human-actions-red-flower.recipe.json  safari-excalidraw-pretty-small-flower-stepwise-human-actions.recipe.json  safari-excalidraw-stepwise-red-flower.recipe.json
docs/guides/: browser-cdp.md
docs/plans/: 2026-05-07-001-refactor-vision-sidecar-architecture-plan.md  2026-05-07-002-refactor-vision-sidecar-architecture-plan-optimized.md  2026-05-07-004-feat-target-driven-api-v2-plan.md
docs/superpowers/plans/: 2026-05-02-e2e-test-infrastructure.md
docs/superpowers/specs/: 2026-05-02-e2e-test-architecture-design.md  2026-05-06-setup-command-enhancement-design.md
packaging/debian/: control  postinst
packaging/homebrew/: sootie.rb.in
pool/main/s/sootie/: sootie_0.1.0_amd64.deb
scoop/: sootie.json
scripts/: build-apt-repo.sh  build-deb.sh  build-macos-tarball.sh  check-distribution-entrypoints.sh  release.sh  render-homebrew-formula.sh
tests/: Cargo.toml
tests/browser-automation/: form_submission.rs  mod.rs  navigation.rs
tests/fixtures/configs/: chrome-launch.json
tests/fixtures/expected-results/: form-submit-success.json
tests/fixtures/html-pages/: form-test.html  navigation-test.html
tests/protocol-compliance/: handshake.rs  mod.rs
tests/scripts/: run-tests-with-coverage.sh
tests/src/: assertions.rs  coverage.rs  fixtures.rs  lib.rs  mocks.rs  test_env.rs
vision-sidecar/: download_model.py  requirements.txt  server.py
