[package]
name = "sootie-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sootie MCP server CLI"

[[bin]]
name = "sootie"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs-next.workspace = true
serde_json.workspace = true
sootie-core = { path = "../sootie-core", version = "0.1.1" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
