[package]
name = "sootie-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
image = "0.25"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
