[package]
name = "sootie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core cross-platform computer-use runtime for Sootie"

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs-next.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
