[package]
name = "sootie-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sootie-core = { path = "../sootie-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
