[package]
name = "sootie-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Joe Developer <joe@example.com>"]
description = "MCP server implementation for Sootie"
repository = "https://github.com/joe223/sootie"
keywords = ["mcp", "json-rpc", "protocol"]

[dependencies]
sootie-core = { version = "0.1.0", path = "../sootie-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
